--- a/projects/06-shopping-cart/src/components/Footer.css
+++ b/projects/06-shopping-cart/src/components/Footer.css
@@ -24,10 +24,14 @@
 
 .footer a {
     background-color: rgb(255, 255, 255);
-    padding: 3px 5px;
-    margin: 3px auto;
-    display: inline-block;
+    padding: 2px 9px;
+    margin: 0 5px;
     border-radius: 10px;
     color: rgb(0, 89, 255);
     text-decoration: unset;
+    font-size: 12px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 }
